syntax = "proto3";

package api;

option go_package = "kafka-go/api";

service Kafka {
  rpc Produce(ProduceRequest) returns (ProduceResponse);
  rpc Consume(ConsumeRequest) returns (ConsumeResponse);
  rpc CommitOffset(CommitOffsetRequest) returns (CommitOffsetResponse);
  rpc FetchOffset(FetchOffsetRequest) returns (FetchOffsetResponse);
}

message Record {
  bytes value = 1;
  int64 offset = 2;
}

message ProduceRequest {
  string topic = 1;
  uint32 partition = 2;
  bytes value = 3;
}

message ProduceResponse {
  string topic = 1;
  uint32 partition = 2;
  int64 offset = 3;
}

message ConsumeRequest {
  string topic = 1;
  uint32 partition = 2;
  int64 offset = 3;
}

message ConsumeResponse {
  Record record = 1;
}

message CommitOffsetRequest {
  string consumer_group_id = 1;
  string topic = 2;
  uint32 partition = 3;
  int64 offset = 4;
}

message CommitOffsetResponse {}

message FetchOffsetRequest {
  string consumer_group_id = 1;
  string topic = 2;
  uint32 partition = 3;
}

message FetchOffsetResponse {
    int64 offset = 1;
}